Added basic content and html for about page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="hero-area">
       <h1>Retreat from the desk, return refreshed.</h1>
     </section>
     <aside class="newsletter">
@@ -53,7 +53,7 @@
     </aside>
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
+        <h2>Have the work week you always dreamed of &ndash; without the bad wifi.</h2>
         <article class="features-items">
           <p class="fontawesome-icon"> <img src="" alt=""> </p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -85,8 +85,7 @@
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
           <div>
-            <h3>LaCrue Bottling Co.</h3>
-            <h3>October 2017</h3>
+            <h3>LaCrue Bottling Co. October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           </div>
         </article>
