--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About Us</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,76 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="../index.html"> <img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li> <a href="../faq/index.html" target="_blank">FAQ</a> </li>
+          <li> <a href="#">About</a> </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        </div>
+      </div>
+    </section>
+    <section class="map">
+      <figure>
+
+      </figure>
+    </section>
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h1>Contact us, because you all need this.</h1>
+        <div class="general">
+          <h3>General Information</h3>
+          <address class="address">
+            333 Main St, Lake Geneva, WI 53147 <br>
+            555-555-5555 <br>
+            hello@unplugged.com
+          </address>
+        </div>
+        <div class="facilitator">
+          <h3>Chat with a Facilitator</h3>
+          <address class="address">555-555-5556 <br>
+            facilitator@unplugged.com</address>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="content">
+
+        </address>
+        <div class="social">
+          <div class="social-icons">
+            <p><a href="#" target="_blank"></a></p>
+            <p><a href="#" target="_blank"></a></p>
+            <p><a href="#" target="_blank"></a></p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="copyright">
+
+    </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
