Added faq basic content and structure, and added footer content

--- a/about/index.html
+++ b/about/index.html
@@ -72,8 +72,10 @@
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
-        <address class="content">
-
+        <h3>Contact</h3>
+        <address class="contact">
+          555-555-5555 <br>
+          hello@unplugged.com
         </address>
         <div class="social">
           <div class="social-icons">
@@ -81,15 +83,11 @@
             <p><a href="#" target="_blank"></a></p>
             <p><a href="#" target="_blank"></a></p>
           </div>
-
         </div>
-
+        <div class="copyright">
+          <p>Copyright 2019 | Unplugged</p>
+        </div>
       </div>
-
-    </div>
-
-    <div class="copyright">
-
     </div>
   </footer>
 
