--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,7 +23,65 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="../index.html"> <img src="" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li> <a href="#" target="_blank">FAQ</a> </li>
+          <li> <a href="../about/index.html" target="_blank">About</a> </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="faq-content">
+      <div class="content-wrapper">
+        <h1>Frequently Asked Questions</h1>
+        <div class="questions">
+          <article>
+            <h3>How do I get to the Unplugged retreat?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </article>
+          <article>
+            <h3>What kind of team is right for the Unplugged retreat?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </article>
+          <article>
+            <h3>What size teams can you accommodate?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </article>
+          <article>
+            <h3>Is there really no wifi available?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <h3>Contact</h3>
+        <address class="contact">
+          555-555-5555 <br>
+          hello@unplugged.com
+        </address>
+        <div class="social">
+          <div class="social-icons">
+            <p><a href="#" target="_blank"></a></p>
+            <p><a href="#" target="_blank"></a></p>
+            <p><a href="#" target="_blank"></a></p>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>Copyright 2019 | Unplugged</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
