--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       </nav>
     </div>
   </header>
-
   <main>
     <section class="hero-area">
       <h1>Retreat from the desk, return refreshed.</h1>
@@ -92,12 +91,13 @@
       </div>
     </section>
   </main>
-
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
-        <address class="content">
-
+        <h3>Contact</h3>
+        <address class="contact">
+          555-555-5555 <br>
+          hello@unplugged.com
         </address>
         <div class="social">
           <div class="social-icons">
@@ -105,15 +105,11 @@
             <p><a href="#" target="_blank"></a></p>
             <p><a href="#" target="_blank"></a></p>
           </div>
-
         </div>
-
+        <div class="copyright">
+          <p>Copyright 2019 | Unplugged</p>
+        </div>
       </div>
-
-    </div>
-
-    <div class="copyright">
-
     </div>
   </footer>
 
