--- a/about/index.html
+++ b/about/index.html
@@ -38,8 +38,8 @@
   <main>
     <section class="mission">
       <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-          <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
         </div>
@@ -47,47 +47,53 @@
     </section>
     <section class="map">
       <figure>
-
       </figure>
     </section>
     <section class="contact-section">
       <div class="content-wrapper">
-        <h1>Contact us, because you all need this.</h1>
-        <div class="general">
-          <h3>General Information</h3>
-          <address class="address">
-            333 Main St, Lake Geneva, WI 53147 <br>
-            555-555-5555 <br>
-            hello@unplugged.com
-          </address>
-        </div>
-        <div class="facilitator">
-          <h3>Chat with a Facilitator</h3>
-          <address class="address">555-555-5556 <br>
-            facilitator@unplugged.com</address>
-        </div>
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+            <p>
+              333 Main St, Lake Geneva, WI 53147 <br>
+              555-555-5555 <br>
+              hello@unplugged.com
+            </p>
+          </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <p>
+              555-555-5556 <br>
+              facilitator@unplugged.com
+            </p>
+          </div>
+        </address>
       </div>
     </section>
   </main>
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
-        <h3>Contact</h3>
         <address class="contact">
-          555-555-5555 <br>
-          hello@unplugged.com
+          <h4>Contact</h4>
+          <p>
+            555-555-5555 <br>
+            hello@unplugged.com
+          </p>
         </address>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="#" target="_blank"></a></p>
-            <p><a href="#" target="_blank"></a></p>
-            <p><a href="#" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com" target="_blank"></a></p>
+            <p><a href="https://twitter.com" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com" target="_blank"></a></p>
           </div>
         </div>
-        <div class="copyright">
-          <p>Copyright 2019 | Unplugged</p>
-        </div>
       </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
     </div>
   </footer>
 
