--- a/faq/index.html
+++ b/faq/index.html
@@ -29,56 +29,55 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li> <a href="#" target="_blank">FAQ</a> </li>
+          <li> <a href="#">FAQ</a> </li>
           <li> <a href="../about/index.html" target="_blank">About</a> </li>
         </ul>
       </nav>
     </div>
   </header>
-  <main>
-    <section class="faq-content">
-      <div class="content-wrapper">
-        <h1>Frequently Asked Questions</h1>
-        <div class="questions">
-          <article>
-            <h3>How do I get to the Unplugged retreat?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-          </article>
-          <article>
-            <h3>What kind of team is right for the Unplugged retreat?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-          </article>
-          <article>
-            <h3>What size teams can you accommodate?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-          </article>
-          <article>
-            <h3>Is there really no wifi available?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-          </article>
-        </div>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequently Asked Questions</h2>
+      <div class="faq-content">
+        <h3>How do I get to the Unplugged retreat?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
       </div>
-    </section>
+      <div class="faq-content">
+        <h3>What kind of team is right for the Unplugged retreat?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h3>What size teams can you accommodate?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+      <div class="faq-content">
+        <h3>Is there really no wifi available?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+      </div>
+    </div>
   </main>
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
-        <h3>Contact</h3>
         <address class="contact">
-          555-555-5555 <br>
-          hello@unplugged.com
+          <h4>Contact</h4>
+          <p>
+            555-555-5555 <br>
+            hello@unplugged.com
+          </p>
         </address>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="#" target="_blank"></a></p>
-            <p><a href="#" target="_blank"></a></p>
-            <p><a href="#" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com" target="_blank"></a></p>
+            <p><a href="https://twitter.com" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com" target="_blank"></a></p>
           </div>
         </div>
-        <div class="copyright">
-          <p>Copyright 2019 | Unplugged</p>
-        </div>
       </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
     </div>
   </footer>
 
