--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#"> <img src="" alt="unplugged logo"></a>
+      <a href="#"><img src="" alt="unplugged logo"></a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -37,17 +37,21 @@
   </header>
   <main>
     <section class="hero-area">
-      <h1>Retreat from the desk, return refreshed.</h1>
-    </section>
-    <aside class="newsletter">
-      <div class="form-description">
-        <h3>Want to join the next retreat?</h3>
-        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
       </div>
-      <div class="form">
-        <h3>Find out more</h3>
-        <input type="text" name="name" value="email address">
-        <input type="button" value="Download Itinerary">
+    </section>
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
       </div>
     </aside>
     <section class="features">
@@ -83,10 +87,8 @@
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like these.</h2>
         <article>
-          <div>
-            <h3>LaCrue Bottling Co. October 2017</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-          </div>
+          <h3>LaCrue Bottling Co. October 2017</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </article>
       </div>
     </section>
@@ -94,22 +96,25 @@
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
-        <h3>Contact</h3>
         <address class="contact">
-          555-555-5555 <br>
-          hello@unplugged.com
+          <h4>Contact</h4>
+          <p>
+            555-555-5555 <br>
+            hello@unplugged.com
+          </p>
         </address>
         <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="#" target="_blank"></a></p>
-            <p><a href="#" target="_blank"></a></p>
-            <p><a href="#" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com" target="_blank"></a></p>
+            <p><a href="https://twitter.com" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com" target="_blank"></a></p>
           </div>
         </div>
-        <div class="copyright">
-          <p>Copyright 2019 | Unplugged</p>
-        </div>
       </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
     </div>
   </footer>
 
