--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
+  <!--Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/4a7a4dc25c.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
