--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
+  <!--Font Awesome Icons Version 5.13.0 -->
+  <script src="https://kit.fontawesome.com/4a7a4dc25c.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -69,27 +72,27 @@
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of &ndash; without the bad wifi.</h2>
         <article class="features-items">
-          <p class="fontawesome-icon"> <img src="" alt=""> </p>
+          <p class="fontawesome-icon"> <i class="fas fa-campground"></i> </p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
         </article>
         <article class="features-items">
-          <p class="fontawesome-icon"> <img src="" alt=""> </p>
+          <p class="fontawesome-icon"> <i class="fas fa-bed"></i> </p>
           <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
         </article>
         <article class="features-items">
-          <p class="fontawesome-icon"> <img src="" alt=""> </p>
+          <p class="fontawesome-icon"> <i class="fas fa-utensils"></i> </p>
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article class="features-items">
-          <p class="fontawesome-icon"> <img src="" alt=""> </p>
+          <p class="fontawesome-icon"> <i class="fas fa-shoe-prints"></i> </p>
           <p class="features-item-description">5 outdoor obstacle courses, including private beach &frac12; mile from bungalow.</p>
         </article>
         <article class="features-items">
-          <p class="fontawesome-icon"> <img src="" alt=""> </p>
+          <p class="fontawesome-icon"> <i class="fas fa-smile"></i> </p>
           <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
         </article>
         <article class="features-items">
-          <p class="fontawesome-icon"> <img src="" alt=""> </p>
+          <p class="fontawesome-icon"> <i class="fas fa-wifi"></i> </p>
           <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
         </article>
       </div>
@@ -102,7 +105,7 @@
           <figure>
             <img src="img/omar-lopez-296944-unsplash.jpg" alt="Team Photo">
           </figure>
-          <div>            
+          <div>
             <h3>LaCrue Bottling Co. <br>
                 October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
