Added remaining css styles to about and faq pages, edits to margins and sizing, corrected links to unplugged logo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of &ndash; without the bad wifi.</h2>
+        <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
         <article class="features-items">
           <p class="fontawesome-icon"> <i class="fas fa-campground"></i> </p>
           <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
