--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="../index.html"> <img src="" alt="unplugged logo"></a>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="Unplugged Logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
